--- a/company-vacation-calendar/src/styles/global.css
+++ b/company-vacation-calendar/src/styles/global.css
@@ -3,6 +3,7 @@
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 @import "react-big-calendar/lib/css/react-big-calendar.css";
+@import "react-toastify/dist/ReactToastify.css";
 
 body {
   margin: 0;
