--- a/company-vacation-calendar-server/views/Home.ejs
+++ b/company-vacation-calendar-server/views/Home.ejs
@@ -4,8 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CVC - Server</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+
+      * {
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      .content {
+        width: 100%;
+        height: 100vh;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Secular One", sans-serif;
+      }
+
+      .content img {
+        width: 350px;
+      }
+
+      .content .text {
+        position: relative;
+        margin-left: 10px;
+        font-size: clamp(16px, 5vw, 50px);
+        letter-spacing: 10px;
+
+        text-transform: uppercase;
+        background-image: linear-gradient(
+          225deg,
+          #1b2b4f 0%,
+          #3955d1 29%,
+          #487dad 67%,
+          #6bb583 100%
+        );
+        background-size: auto auto;
+        background-clip: border-box;
+        background-size: 200% auto;
+        color: #fff;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: textclip 2s linear infinite;
+        display: inline-block;
+      }
+
+      @keyframes textclip {
+        to {
+          background-position: -200% center;
+        }
+      }
+
+      @media screen and (max-width: 800px) {
+        .content {
+          flex-direction: column;
+        }
+
+        .content img {
+          width: 200px;
+        }
+
+        .content .text {
+          margin-top: 10px;
+          margin-left: 0px;
+          text-align: center;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1 style="text-align: center">Server is working!</h1>
+    <div class="content">
+      <img src="server.png" alt="server_icon" />
+      <div class="text">SERVER IS WORKING</div>
+    </div>
   </body>
 </html>
